--- a/src/components/singlePost/SinglePost.scss
+++ b/src/components/singlePost/SinglePost.scss
@@ -12,6 +12,7 @@
     margin: auto;
 
     .singlePostContainerList {
+      width: 1160px;
       display: flex;
       flex-direction: column;
       gap: 10px;
@@ -20,6 +21,7 @@
       box-shadow: 0 0 20px 0 hsla(0, 1%, 50%, 0.2);
 
       img {
+        width: 100%;
         height: 500px;
         object-fit: cover;
         border-radius: 10px;
